--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,13 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  
   "dependencies": {
     "random-words": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
-    "react-use-websocket": "^4.3.1"
+    "react-use-websocket": "^4.3.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
