--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,6 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["clientser/src"],
+  "include": ["client/src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
